Add more profiles to test against other JPA Providers

--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
                         <version>${dn.maven.plugin.ver}</version>
                         <configuration>
                             <api>JPA</api>
-                            <persistenceUnitName>MyTest_DN</persistenceUnitName>
+                            <persistenceUnitName>mytest_datanucleus</persistenceUnitName>
                             <fork>false</fork>
                             <verbose>false</verbose>
                             <log4jConfiguration>${basedir}/src/main/resources/log4j.properties</log4jConfiguration>
@@ -167,6 +167,96 @@
                                 <configuration>
                                     <systemPropertyVariables>
                                         <profile>${project.activeProfiles[0].id}</profile>
+                                    </systemPropertyVariables>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>datanucleus-snapshot</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <dn.api_jpa.min.ver>5.0.1</dn.api_jpa.min.ver>
+                <dn.api_jpa.max.ver>5.1.99</dn.api_jpa.max.ver>
+                <dn.datastore.min.ver>5.0.1</dn.datastore.min.ver>
+                <dn.datastore.max.ver>5.1.99</dn.datastore.max.ver>
+                <dn.maven.plugin.ver>5.0.2</dn.maven.plugin.ver>
+            </properties>
+            <repositories>
+                <repository>
+                    <id>DN_Nightly_M2_Repo</id>
+                    <url>http://www.datanucleus.org/downloads/maven2-nightly/</url>
+                    <releases>
+                        <enabled>false</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+            <dependencies>
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-api-jpa</artifactId>
+                    <version>5.1.5-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-rdbms</artifactId>
+                    <version>5.1.6-SNAPSHOT</version>
+                </dependency>
+
+            </dependencies>
+            <build>
+                <plugins>
+
+                    <plugin>
+                        <groupId>org.datanucleus</groupId>
+                        <artifactId>datanucleus-maven-plugin</artifactId>
+                        <version>${dn.maven.plugin.ver}</version>
+                        <configuration>
+                            <api>JPA</api>
+                            <persistenceUnitName>mytest_datanucleus</persistenceUnitName>
+                            <fork>false</fork>
+                            <verbose>false</verbose>
+                            <log4jConfiguration>${basedir}/src/main/resources/log4j.properties</log4jConfiguration>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>enhance</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <!-- Unit Testing -->
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <includes>
+                                <include>**/*Test.java</include>
+                            </includes>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables>
+                                        <profile>datanucleus</profile>
                                     </systemPropertyVariables>
                                 </configuration>
                             </execution>
@@ -258,6 +348,331 @@
                                 <configuration>
                                     <systemPropertyVariables>
                                         <org.jboss.logging.provider>jdk</org.jboss.logging.provider>
+                                        <profile>${project.activeProfiles[0].id}</profile>
+                                    </systemPropertyVariables>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>batoo</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <batoo-jpa.version>2.0.1.2</batoo-jpa.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.batoo.jpa</groupId>
+                    <artifactId>batoo-jpa</artifactId>
+                    <version>${batoo-jpa.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-jdk14</artifactId>
+                    <version>1.7.25</version>
+                    <exclusions>
+                        <exclusion>
+                            <artifactId>slf4j-api</artifactId>
+                            <groupId>org.slf4j</groupId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>javax.validation</groupId>
+                    <artifactId>validation-api</artifactId>
+                    <version>2.0.0.Final</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.jolbox</groupId>
+                    <artifactId>bonecp</artifactId>
+                    <version>0.8.0.RELEASE</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- Unit Testing -->
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <includes>
+                                <include>**/*Test.java</include>
+                            </includes>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables>
+                                        <profile>${project.activeProfiles[0].id}</profile>
+                                    </systemPropertyVariables>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>kundera</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <hibernate-core.version>5.2.12.Final</hibernate-core.version>
+                <kundera.version>3.12</kundera.version>
+            </properties>
+            <repositories>
+                <repository>
+                    <id>sonatype-nexus</id>
+                    <name>Kundera Public Repository</name>
+                    <url>https://oss.sonatype.org/content/repositories/releases</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+            <dependencies>
+                <dependency>
+                    <groupId>com.impetus.kundera.client</groupId>
+                    <artifactId>kundera-rdbms</artifactId>
+                    <version>${kundera.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-core</artifactId>
+                    <version>${hibernate-core.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-jdk14</artifactId>
+                    <version>1.7.25</version>
+                    <exclusions>
+                        <exclusion>
+                            <artifactId>slf4j-api</artifactId>
+                            <groupId>org.slf4j</groupId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- Unit Testing -->
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <includes>
+                                <include>**/*Test.java</include>
+                            </includes>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables>
+                                        <org.jboss.logging.provider>jdk</org.jboss.logging.provider>
+                                        <profile>${project.activeProfiles[0].id}</profile>
+                                    </systemPropertyVariables>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>objectdb</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <objectdb.version>2.7.4</objectdb.version>
+            </properties>
+            <repositories>
+                <repository>
+                    <id>objectdb</id>
+                    <name>ObjectDB Repository</name>
+                    <url>http://m2.objectdb.com</url>
+                </repository>
+            </repositories>
+            <dependencies>
+                <dependency>
+                    <groupId>com.objectdb</groupId>
+                    <artifactId>objectdb</artifactId>
+                    <version>${objectdb.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>javax.transaction</groupId>
+                    <artifactId>jta</artifactId>
+                    <version>1.1</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- Unit Testing -->
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <includes>
+                                <include>**/*Test.java</include>
+                            </includes>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables>
+                                        <profile>${project.activeProfiles[0].id}</profile>
+                                    </systemPropertyVariables>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>openjpa</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <openjpa.version>2.4.2</openjpa.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.openjpa</groupId>
+                    <artifactId>openjpa</artifactId>
+                    <version>${openjpa.version}</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.openjpa</groupId>
+                        <artifactId>openjpa-maven-plugin</artifactId>
+                        <version>${openjpa.version}</version>
+                        <configuration>
+                            <includes>**/mydomain/model/*.class</includes>
+                            <addDefaultConstructor>true</addDefaultConstructor>
+                            <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>enhancer</id>
+                                <phase>process-classes</phase>
+                                <goals>
+                                    <goal>enhance</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.openjpa</groupId>
+                                <artifactId>openjpa</artifactId>
+                                <version>${openjpa.version}</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                    <plugin>
+                        <!-- Unit Testing -->
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <includes>
+                                <include>**/*Test.java</include>
+                            </includes>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables>
+                                        <profile>${project.activeProfiles[0].id}</profile>
+                                    </systemPropertyVariables>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>orientdb</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <orientdb.version>2.2.31</orientdb.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>com.orientechnologies</groupId>
+                    <artifactId>orientdb-client</artifactId>
+                    <version>${orientdb.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.orientechnologies</groupId>
+                    <artifactId>orientdb-core</artifactId>
+                    <version>${orientdb.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.orientechnologies</groupId>
+                    <artifactId>orientdb-object</artifactId>
+                    <version>${orientdb.version}</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- Unit Testing -->
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <includes>
+                                <include>**/*Test.java</include>
+                            </includes>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables>
                                         <profile>${project.activeProfiles[0].id}</profile>
                                     </systemPropertyVariables>
                                 </configuration>
